# bioinformatics

./: AdditiveTree.cpp  AdditiveTree.h  CMakeLists.txt  Clustering.cpp  Clustering.h  DissociativeClustering.cpp  DissociativeClustering.h  MSA.cpp  MSA.h  NeedlemanWunsch.cpp  NeedlemanWunsch.h  NeighbourJoin.cpp  NeighbourJoin.h  ProgressiveMSA.cpp  ProgressiveMSA.h  SecondaryStructurePredictor.cpp  SecondaryStructurePredictor.h  SequenceAligner.cpp  SequenceAligner.h  SmithWaterman.cpp  SmithWaterman.h  UPGMA.cpp  UPGMA.h  draw_rna.py  draw_unrooted.py  generate_graph.py  main.cpp  matrix.txt  sequences.txt
results/: complements.txt  matrix.txt
